--- a/Shared/SimpleLayout.razor
+++ b/Shared/SimpleLayout.razor
@@ -13,7 +13,7 @@
             <center>
                 <hr class="line">
             </center>
-            <div class="bgDiv">
+            <div>
                 <br>
                 <h3>Vous utilisez la méthode SIMPLE ?</h3>
                 <span class="oi oi-heart" aria-hidden="true"></span>
@@ -25,20 +25,26 @@
                     sur ce wallet </a>
                 <a href="https://etherscan.io/address/0xcC424e30Ff6eEAb4E6B3A900c5446038F858b314">Ethereum</a>
                 <br>
-            </div>
-
-            <div>
+                <h3>Gestion des données</h3>
+                <span class="oi oi-map-marker" aria-hidden="true"></span>
+                <br>
+                 <a>
+                    Les données saisies dans l'application ne sont pas collectées. Elles sont stockées localement dans le cache de votre navigateur.
+                    Selon vos contraintes, d'autres solutions sont possibles. Prenons contact afin d'échanger sur les différentes implémentations.
+                 </a>  
                 <br>
                 <h3>Licence</h3>
                 <span class="oi oi-badge" aria-hidden="true"></span>
+                <br>
                 <a href="Data/gpl-3.0.md">GPL-3.0 license</a>
             </div>
             
-            <br><br><br>
+            <br><br><br><br><br><br>
             <div class="loadBox">
                 <i>Les sections suivantes sont en cours de développement. Elles présentent le détail de la méthode et
                     les fonctionnalités qui lui seront prochainement associées</i>
             </div>
+           
         </article>
     </main>
 </div>
