--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -18,16 +18,14 @@
                 <h3>Mail</h3>
                 <span class="oi oi-envelope-closed" aria-hidden="true"></span>
                 <div>
-                    <a>michael.vacarella@pm.me</a>
+                    <a href="mailto: michael.vacarella@pm.me">michael.vacarella@pm.me</a>
                 </div>
-
 
                 <h3>LinkedIn</h3>
                 <span class="oi oi-people" aria-hidden="true"></span>
                 <div>
                     <a href="https://www.linkedin.com/in/mvacarella">mvacarella</a>
                 </div>
-
 
                 <h3>à propos du site</h3>
                 <span class="oi oi-globe" aria-hidden="true"></span>
