--- a/Pages/Audits-ssi.razor
+++ b/Pages/Audits-ssi.razor
@@ -66,6 +66,9 @@
         identifiées au cours d’autres activités d’audit définies dans ce chapitre.
         Cette activité d’audit peut être réalisée soit depuis l’extérieur du système d’information audité
         (notamment depuis Internet ou le réseau interconnecté d’un tiers), soit depuis l’intérieur.
+        Un test d’intrusion seul n’a pas vocation à être exhaustif. Il s’agit d’une activité qui doit être effectuée en 
+        complément d’autres activités d’audit afin d’en améliorer l’efficacité ou de démontrer la faisabilité de l’exploitation 
+        des failles et vulnérabilités découvertes à des fins de sensibilisation.
     </p>
     <br>
 </div>
