--- a/Pages/Simple.razor
+++ b/Pages/Simple.razor
@@ -6,9 +6,9 @@
 
 <PageTitle>SIMPLE</PageTitle>
 
-<h1>Méthode SIMPLE</h1>
+<h1>Accompagnement</h1>
 <p class="sh1">
-    L'objectif de cette méthode est de faire progresser significativement le niveau de sécurité d'un projet
+    L'objectif de cette méthode d'accompagnement est de faire progresser significativement le niveau de sécurité d'un projet
     en moins de 2 mois
 </p>
 
@@ -17,6 +17,16 @@
     <br><br><br><br><br><br><br><br><br>
 </div>
 <center><hr class="line"></center>
+
+<div>
+    <h2>SIMPLE</h2>
+    <span class="oi oi-shield" aria-hidden="true"></span>
+    <br>
+    <p>
+        La méthode SIMPLE permet un accompagnement efficace et adaptable à tous vos projets et périmètres du système d'information.
+        Limitée dans le temps, elle se focalise sur l'essentiel et fournit des indicateurs sur la sécurisation réalisée
+    </p>
+</div>
 
 <div>
     <h2>Périmètre</h2>
@@ -85,8 +95,8 @@ else
         <table class="table">
             <thead>
                 <tr>
+                    <th>Id</th>
                     <th>Atelier</th>
-                    <th>Déscription</th>
                     <th>Poids</th>
                 </tr>
             </thead>
