--- a/Shared/SimpleLayout.razor
+++ b/Shared/SimpleLayout.razor
@@ -21,16 +21,15 @@
                 <a>Le temps nécessaire pour le développement et l'amélioration continue de la méthode SIMPLE est pris
                     sur mon temps libre. J'ai tenu à ce que ce projet soit gratuit et open-source, pour que chacun
                     puisse l'utiliser.
-                    Si vous appréciez la plus-value qu'apporte cette méthode au quotidien, n'hésitez pas à faire un don
-                    sur ce wallet </a>
-                <a href="https://etherscan.io/address/0xcC424e30Ff6eEAb4E6B3A900c5446038F858b314">Ethereum</a>
+                    Si vous appréciez la plus-value qu'apporte cette méthode au quotidien, n'hésitez pas <a href="https://www.buymeacoffee.com/taisensolutions">à m'offrir un café</a> :D </a>
+                
                 <br>
                 <h3>Gestion des données</h3>
                 <span class="oi oi-map-marker" aria-hidden="true"></span>
                 <br>
                  <a>
                     Les données saisies dans l'application ne sont pas collectées. Elles sont stockées localement dans le cache de votre navigateur.
-                    Selon vos contraintes, d'autres solutions sont possibles. Prenons contact afin d'échanger sur les différentes implémentations.
+                    
                  </a>  
                 <br>
                 <h3>Licence</h3>
@@ -41,8 +40,7 @@
             
             <br><br><br><br><br><br>
             <div class="loadBox">
-                <i>Les sections suivantes sont en cours de développement. Elles présentent le détail de la méthode et
-                    les fonctionnalités qui lui seront prochainement associées</i>
+                <i>Ces pages sont destinées à la formation, pour la production une intégration Cloud ou On-premise est possible.</i>
             </div>
            
         </article>
