--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -50,6 +50,12 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Contact">
+                <span class="oi oi-person" aria-hidden="true"></span> Contact
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
