--- a/Pages/Formation.razor
+++ b/Pages/Formation.razor
@@ -5,7 +5,7 @@
 <link rel="icon" type="image/x-icon" href="~/Images/Favicon.ico" />
 <h1>Formations</h1>
 <p class="sh1">
-    Les formations et sensibilisations adressent les différents aspects de la cybersécurité et sont systématiquement adaptées au public visé.
+    Mes formations et sensibilisations adressent les différents aspects de la cybersécurité et sont systématiquement adaptées au public visé.
     </p>
 
 <div class="bgFormation">
@@ -20,7 +20,7 @@
     <img src="Images/Ok.png" class="imgLogo" alt="Entreprise">
     <p>
         La sécurité est l’affaire de tous ! 
-        Taisen propose des sensibilisations adaptées à vos personnels afin de prévenir au maximum les risques pesant sur vos systèmes d'information.
+        Les sensibilisations sont adaptées à vos personnels afin de prévenir au maximum les risques pesant sur vos systèmes d'information.
         Il peut s'agir de sensibilisations annuelles, de démonstration de cyberattaque, ou de formations spécifiques.
     </p>
     <br>
@@ -43,6 +43,7 @@
     <h2>Particuliers</h2>
     <img src="Images/Ok.png" class="imgLogo" alt="Particuliers">
     <p>
+        L'objectif est de mieux gérer ses données personnelles et de se protéger des attaques dans notre vie quotidienne. 
         Des formations sur-mesure peuvent être proposées selon le besoin ou le domaine de progression visé. N'hésitez pas à prendre contact.
     </p>
     <br>
