--- a/Pages/Simple.razor
+++ b/Pages/Simple.razor
@@ -8,8 +8,8 @@
 
 <h1>Accompagnement</h1>
 <p class="sh1">
-    L'objectif de cette méthode d'accompagnement est de faire progresser significativement le niveau de sécurité d'un projet
-    en moins de 2 mois
+    Je propose une prestation d'accompagnement qui va à l'essentiel. 
+    Baptisée "SIMPLE", cette méthode sécurise votre projet à court terme.
 </p>
 
 
@@ -23,8 +23,11 @@
     <span class="oi oi-shield" aria-hidden="true"></span>
     <br>
     <p>
-        La méthode SIMPLE permet un accompagnement efficace et adaptable à tous vos projets et périmètres du système d'information.
-        Limitée dans le temps, elle se focalise sur l'essentiel et fournit des indicateurs sur la sécurisation réalisée
+    L'objectif de cette méthode d'accompagnement est de faire progresser significativement le niveau de sécurité d'un projet
+    en moins de 2 mois.
+    Cette méthode est public et open source. Chacun peut l'utiliser librement sur ce site. 
+    Elle nécessite néanmoins l'expérience, l'expertise technique et la partialité d'une prestation d'accompagnement en cybersécurité.
+    Je reste à l'écoute de vos besoins et pour toute question autour de cette méthodologie.
     </p>
 </div>
 
