--- a/Pages/Audits-ssi.razor
+++ b/Pages/Audits-ssi.razor
@@ -5,7 +5,7 @@
 <link rel="icon" type="image/x-icon" href="~/Images/Favicon.ico" />
 <h1>Audits de sécurité</h1>
 <p class="sh1">
-    Les audits de sécurité s'appuient sur la norme ISO-19011 et le référentiel général de sécurité 
+    Mes prestations d'audits s'appuient sur la norme ISO-19011 et le référentiel général de sécurité 
     (<a href="https://www.ssi.gouv.fr/entreprise/reglementation/confiance-numerique/le-referentiel-general-de-securite-rgs/">RGS</a>),
     en particulier concernant les exigences P.A.S.S.I. Les référentiels techniques sont proposés et retenus en fonction du périmètre à auditer.
 </p>
