--- a/Pages/Audits-ssi.razor
+++ b/Pages/Audits-ssi.razor
@@ -5,15 +5,19 @@
 <link rel="icon" type="image/x-icon" href="~/Images/Favicon.ico" />
 <h1>Audits de sécurité</h1>
 <p class="sh1">
-    Mes prestations d'audits s'appuient sur la norme ISO-19011 et le référentiel général de sécurité 
-    (<a href="https://www.ssi.gouv.fr/entreprise/reglementation/confiance-numerique/le-referentiel-general-de-securite-rgs/">RGS</a>),
-    en particulier concernant les exigences P.A.S.S.I. Les référentiels techniques sont proposés et retenus en fonction du périmètre à auditer.
+    Mes prestations d'audits s'appuient sur la norme ISO-19011 et le référentiel général de sécurité
+    (<a
+        href="https://www.ssi.gouv.fr/entreprise/reglementation/confiance-numerique/le-referentiel-general-de-securite-rgs/">RGS</a>),
+    en particulier concernant les exigences P.A.S.S.I. Les référentiels techniques sont proposés et retenus en fonction
+    du périmètre à auditer.
 </p>
 
 <div class="bgAudits">
     <br><br><br><br><br><br><br><br><br>
 </div>
-<center><hr class="line"></center>
+<center>
+    <hr class="line">
+</center>
 
 
 <div>
@@ -66,10 +70,10 @@
         identifiées au cours d’autres activités d’audit définies dans ce chapitre.
         Cette activité d’audit peut être réalisée soit depuis l’extérieur du système d’information audité
         (notamment depuis Internet ou le réseau interconnecté d’un tiers), soit depuis l’intérieur.
-        Un test d’intrusion seul n’a pas vocation à être exhaustif. Il s’agit d’une activité qui doit être effectuée en 
-        complément d’autres activités d’audit afin d’en améliorer l’efficacité ou de démontrer la faisabilité de l’exploitation 
+        Un test d’intrusion seul n’a pas vocation à être exhaustif. Il s’agit d’une activité qui doit être effectuée en
+        complément d’autres activités d’audit afin d’en améliorer l’efficacité ou de démontrer la faisabilité de
+        l’exploitation
         des failles et vulnérabilités découvertes à des fins de sensibilisation.
     </p>
     <br>
 </div>
-
