--- a/Pages/Contact.razor
+++ b/Pages/Contact.razor
@@ -5,7 +5,8 @@
 
 <h1>Contact</h1>
 <p class="sh1">
-    Une prestation sur-mesure est également possible, n'hésitez pas en prendre contact par mail ou directement via LinkedIn
+    Une prestation sur-mesure est également possible, n'hésitez pas en prendre contact par mail ou directement via
+    LinkedIn
 </p>
 <div class="bgBan">
     <br>
