--- a/Pages/Formation.razor
+++ b/Pages/Formation.razor
@@ -5,22 +5,26 @@
 <link rel="icon" type="image/x-icon" href="~/Images/Favicon.ico" />
 <h1>Formations</h1>
 <p class="sh1">
-    Mes formations et sensibilisations adressent les différents aspects de la cybersécurité et sont systématiquement adaptées au public visé.
-    </p>
+    Mes formations et sensibilisations adressent les différents aspects de la cybersécurité et sont systématiquement
+    adaptées au public visé.
+</p>
 
 <div class="bgFormation">
     <br><br><br><br><br><br><br><br><br>
 </div>
 
-<center><hr class="line"></center>
+<center>
+    <hr class="line">
+</center>
 
 <div class="bgDiv">
     <br>
     <h2>Entreprises</h2>
     <img src="Images/Ok.png" class="imgLogo" alt="Entreprise">
     <p>
-        La sécurité est l’affaire de tous ! 
-        Les sensibilisations sont adaptées à vos personnels afin de prévenir au maximum les risques pesant sur vos systèmes d'information.
+        La sécurité est l’affaire de tous !
+        Les sensibilisations sont adaptées à vos personnels afin de prévenir au maximum les risques pesant sur vos
+        systèmes d'information.
         Il peut s'agir de sensibilisations annuelles, de démonstration de cyberattaque, ou de formations spécifiques.
     </p>
     <br>
@@ -31,9 +35,11 @@
     <h2>Écoles</h2>
     <img src="Images/Ok.png" class="imgLogo" alt="Écoles">
     <p>
-        De bac+3 à Bac+5, de nombreux cours et TP sont réalisés depuis 2018 pour des cursus de chef de projets, développeurs ou experts cybersécurité.
-        Une attention toute particulière est portée aux syllabus et référentiels de formation. 
-        Des TP concrets et réalistes permettent l'acquisition des compétences opérationnelles attendues sur le marché du travail. 
+        De bac+3 à Bac+5, de nombreux cours et TP sont réalisés depuis 2018 pour des cursus de chef de projets,
+        développeurs ou experts cybersécurité.
+        Une attention toute particulière est portée aux syllabus et référentiels de formation.
+        Des TP concrets et réalistes permettent l'acquisition des compétences opérationnelles attendues sur le marché du
+        travail.
     </p>
     <br>
 </div>
@@ -43,8 +49,10 @@
     <h2>Particuliers</h2>
     <img src="Images/Ok.png" class="imgLogo" alt="Particuliers">
     <p>
-        L'objectif est de mieux gérer ses données personnelles et de se protéger des attaques dans notre vie quotidienne. 
-        Des formations sur-mesure peuvent être proposées selon le besoin ou le domaine de progression visé. N'hésitez pas à prendre contact.
+        L'objectif est de mieux gérer ses données personnelles et de se protéger des attaques dans notre vie
+        quotidienne.
+        Des formations sur-mesure peuvent être proposées selon le besoin ou le domaine de progression visé. N'hésitez
+        pas à prendre contact.
     </p>
     <br>
 </div>
