--- a/Pages/Simple-demo.razor
+++ b/Pages/Simple-demo.razor
@@ -8,7 +8,17 @@
 
 @if (GetEtapes == null)
 {
-    <p><em>Chargement...</em></p>
+    <div class="sk-cube-grid">
+        <div class="sk-cube sk-cube1"></div>
+        <div class="sk-cube sk-cube2"></div>
+        <div class="sk-cube sk-cube3"></div>
+        <div class="sk-cube sk-cube4"></div>
+        <div class="sk-cube sk-cube5"></div>
+        <div class="sk-cube sk-cube6"></div>
+        <div class="sk-cube sk-cube7"></div>
+        <div class="sk-cube sk-cube8"></div>
+        <div class="sk-cube sk-cube9"></div>
+    </div>
     <button class="button" @onclick=Clear>Vider le cache</button>
 }
 else
@@ -184,7 +194,7 @@ else
                                 });
                             }
 
-                            linqRslt = @L.CR.MesureSecurites.RemoveAll( ms => ms.Nom == String.Empty);
+                            linqRslt = @L.CR.MesureSecurites.RemoveAll(ms => ms.Nom == String.Empty);
 
                             <form>
                                 <EditForm Model=@L.CR.MesureSecurites>
@@ -335,18 +345,22 @@ else
                         L.Nom.GetType();
                         @if (A.Nom == "I2" && L.CR?.FonctionSensibles?.Count > 0)
                         {
-                            foreach( FonctionSensible fs in L.CR.FonctionSensibles){
-                                @if( fs.Nom != DefaultStr){
+                            foreach (FonctionSensible fs in L.CR.FonctionSensibles)
+                            {
+                                @if (fs.Nom != DefaultStr)
+                                {
                                     CollectedFs?.Add(fs);
                                 }
                             }
                         }
                         else if (A.Nom == "P2" && L.CR?.MesureSecurites?.Count > 0)
                         {
-                            foreach(MesureSecurite ms in L.CR.MesureSecurites ){
-                                @if(ms.Nom != DefaultStr){
+                            foreach (MesureSecurite ms in L.CR.MesureSecurites)
+                            {
+                                @if (ms.Nom != DefaultStr)
+                                {
                                     CollectedMs?.Add(ms);
-                                }                                
+                                }
                             }
                         }
                     }
