--- a/Pages/Simple.razor
+++ b/Pages/Simple.razor
@@ -8,7 +8,7 @@
 
 <h1>Accompagnement</h1>
 <p class="sh1">
-    Je propose une prestation d'accompagnement qui va à l'essentiel. 
+    Je propose une prestation d'accompagnement qui va à l'essentiel.
     Baptisée "SIMPLE", cette méthode sécurise votre projet à court terme.
 </p>
 
@@ -16,18 +16,22 @@
 <div class="bgAccompagnement">
     <br><br><br><br><br><br><br><br><br>
 </div>
-<center><hr class="line"></center>
+<center>
+    <hr class="line">
+</center>
 
 <div>
     <h2>SIMPLE</h2>
     <span class="oi oi-shield" aria-hidden="true"></span>
     <br>
     <p>
-    L'objectif de cette méthode d'accompagnement est de faire progresser significativement le niveau de sécurité d'un projet
-    en moins de 2 mois.
-    Cette méthode est public et open source. Chacun peut l'utiliser librement sur ce site. 
-    Elle nécessite néanmoins l'expérience, l'expertise technique et la partialité d'une prestation d'accompagnement en cybersécurité.
-    Je reste à l'écoute de vos besoins et pour toute question autour de cette méthodologie.
+        L'objectif de cette méthode d'accompagnement est de faire progresser significativement le niveau de sécurité
+        d'un projet
+        en moins de 2 mois.
+        Cette méthode est public et open source. Chacun peut l'utiliser librement sur ce site.
+        Elle nécessite néanmoins l'expérience, l'expertise technique et la partialité d'une prestation d'accompagnement
+        en cybersécurité.
+        Je reste à l'écoute de vos besoins et pour toute question autour de cette méthodologie.
     </p>
 </div>
 
@@ -38,7 +42,8 @@
     <p>Le champ de cette méthodologie cible les projets applicatifs ainsi que l'infrastructure sur laquelle ils
         reposent, ce qui inclut:</p>
     <ul>
-        <li>- toute application métier, qu'il s'agisse d'un environnement Web, industriel, IoT, cloud, hybride, etc.</li>
+        <li>- toute application métier, qu'il s'agisse d'un environnement Web, industriel, IoT, cloud, hybride, etc.
+        </li>
         <li>- le middleware, les librairies, les dépendances et les composants tiers</li>
         <li>- les composants du système d’exploitation, des microservices, ainsi que leur orchestration</li>
         <br>
@@ -47,7 +52,17 @@
 
 @if (GetEtapes == null)
 {
-    <p><em>Chargement...</em></p>
+    <div class="sk-cube-grid">
+        <div class="sk-cube sk-cube1"></div>
+        <div class="sk-cube sk-cube2"></div>
+        <div class="sk-cube sk-cube3"></div>
+        <div class="sk-cube sk-cube4"></div>
+        <div class="sk-cube sk-cube5"></div>
+        <div class="sk-cube sk-cube6"></div>
+        <div class="sk-cube sk-cube7"></div>
+        <div class="sk-cube sk-cube8"></div>
+        <div class="sk-cube sk-cube9"></div>
+    </div>
 }
 else
 {
@@ -87,7 +102,7 @@ else
             }
             <br>
         </ul>
-        
+
     </div>
 
     <div class="bgDiv">
@@ -118,11 +133,11 @@ else
         <a>Soit un poids total de @TotalPoids jours</a>
         <br>
     </div>
-    
+
 }
 
 <form>
-    <a href="/simple-demo">        
+    <a href="/simple-demo">
         <button class="button" @onclick=Clear>Nouvel Accompagnement</button>
         <input type="button" class="button" value="Poursuivre">
     </a>
