--- a/Pages/Audits-ssi.razor
+++ b/Pages/Audits-ssi.razor
@@ -23,7 +23,8 @@
 <div>
     <br>
     <h2>Audit de configuration</h2>
-    <img src="Images/Ok.png" class="imgLogo" alt="--">
+        <span class="oi oi-cog" aria-hidden="true"></span>
+    <br>
     <p>
         L’audit de configuration a pour vocation de vérifier la mise en œuvre de pratiques de sécurité conformes à
         l’état de l’art et aux exigences et règles internes de l’audité en matière de configuration des dispositifs
@@ -37,7 +38,8 @@
 <div class="bgDiv">
     <br>
     <h2>Audit de code source</h2>
-    <img src="Images/Ok.png" class="imgLogo" alt="--">
+        <span class="oi oi-terminal" aria-hidden="true"></span>
+    <br>
     <p>
         L’audit de code source consiste en l’analyse de tout ou partie du code source ou des conditions de
         compilation d’une application dans le but d’y découvrir des vulnérabilités, liées à de mauvaises pratiques
@@ -49,7 +51,8 @@
 <div>
     <br>
     <h2>Audit d’architecture</h2>
-    <img src="Images/Ok.png" class="imgLogo" alt="--">
+        <span class="oi oi-cloud" aria-hidden="true"></span>
+    <br>
     <p>
         L’audit d’architecture consiste en la vérification de la conformité des pratiques de sécurité relatives au
         choix, au positionnement et à la mise en œuvre des dispositifs matériels et logiciels déployés dans un
@@ -62,7 +65,8 @@
 <div class="bgDiv">
     <br>
     <h2>Tests d’intrusion</h2>
-    <img src="Images/Ok.png" class="imgLogo" alt="--">
+        <span class="oi oi-bug" aria-hidden="true"></span>
+    <br>
     <p>
         Le principe du test d’intrusion est de découvrir des vulnérabilités sur le système d’information audité et
         de vérifier leur exploitabilité et leur impact, dans les conditions réelles d’une attaque sur le système
