--- a/Pages/Formation.razor
+++ b/Pages/Formation.razor
@@ -20,7 +20,8 @@
 <div class="bgDiv">
     <br>
     <h2>Entreprises</h2>
-    <img src="Images/Ok.png" class="imgLogo" alt="Entreprise">
+    <span class="oi oi-briefcase" aria-hidden="true"></span>
+    <br>
     <p>
         La sécurité est l’affaire de tous !
         Les sensibilisations sont adaptées à vos personnels afin de prévenir au maximum les risques pesant sur vos
@@ -33,7 +34,8 @@
 <div>
     <br>
     <h2>Écoles</h2>
-    <img src="Images/Ok.png" class="imgLogo" alt="Écoles">
+    <span class="oi oi-book" aria-hidden="true"></span>
+    <br>
     <p>
         De bac+3 à Bac+5, de nombreux cours et TP sont réalisés depuis 2018 pour des cursus de chef de projets,
         développeurs ou experts cybersécurité.
@@ -47,7 +49,8 @@
 <div class="bgDiv">
     <br>
     <h2>Particuliers</h2>
-    <img src="Images/Ok.png" class="imgLogo" alt="Particuliers">
+    <span class="oi oi-home" aria-hidden="true"></span>
+    <br>
     <p>
         L'objectif est de mieux gérer ses données personnelles et de se protéger des attaques dans notre vie
         quotidienne.
