--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,100 +1,44 @@
 ﻿@page "/"
 
-<PageTitle>Taisen</PageTitle>
+<PageTitle>Taisen solutions</PageTitle>
 
 <link rel="icon" type="image/x-icon" href="~/Images/Favicon.ico" />
 <h1>TAISEN Solutions</h1>
-<p class="sh1"> La sécurité en cohérence avec vos projets</p>
+<p class="sh1">Taisen est une microentreprise fondée en 2022. Cette structure me permet de vous accompagner pour la sécurisation de votre système d'information.</p>
 
 <div class="bgBan">
     <br>
     <img src="Images/Logov2.png" class="imgBan" alt="Conseil en systèmes et logiciels informatiques">
     <br>
 </div>
-<center><hr class="line"></center>
-
-<div class="bgDiv">
-    <br>
-    <h2>Une approche pragmatique et intelligente pour sécuriser votre système d'information</h2>
-    <img src="Images/Ok.png" class="imgLogo" alt="accompagnement">
-    <p>
-        Taisen est une microentreprise fondée en 2022. 
-        Cette structure me permet d'atteindre mon objectif: sécuriser vos projets de manière adaptée et cohérente.
-        Face aux difficultés rencontrées pour la sécurisation des projets liés à l'infrastructure et aux applications, 
-        Je propose une expertise technique réaliste, proche des équipes techniques et cohérente avec les objectifs des RSSI.
-        <br>
-        Si vous avez déjà eu le sentiment que, malgré vos efforts, vos contrôles de sécurité et processus fonctionnels ne vous apportent pas la maitrise réelle de vos risques, 
-        vous êtes au bon endroit.       
-    </p>
-    <br>
-</div>
+<center>
+    <hr class="line">
+</center>
 
 <div>
-    <br>
-    <h2>Une méthode d'accompagnement en phase avec les bonnes pratiques</h2>
-    <img src="Images/Ok.png"class="imgLogo" alt="bonnes pratiques">
-    <p> 
-        L'accompagnement technique et la réalisation des tests de sécurité au bon moment sont souvent les maillons manquant d'une démarche de sécurisation réussie.
-        Avec Taisen, je souhaite apporter aux projets des solutions bas niveau leur permettant de maitriser leur niveau de sécurité. 
-        Des livrables adaptés et conformes aux bonnes pratiques offrent aux clients la possibilité de gérer en autonomie les enjeux de sécurité.
-        <br>
-        La méthode S.I.M.P.L.E est issue d'une capitalisation de l'expérience acquise auprès d'une centaine de projets applicatifs.
-        Les succès, mais aussi les échecs sont pris en compte, afin d'améliorer cette méthode de manière continue. 
-        Les bonnes pratiques de l'<a href="https://www.ssi.gouv.fr/">ANSSI</a>  et les standards de l'<a href="https://owasp.org/projects/">OWASP</a> sont intégrés à la méthode.
-    </p>
     <form>
         <a href="/simple">
-            <input type="button" class="button" value="Découvrir l'Accompagnement">
+            <input type="button" class="button" value="Accompagnement">
         </a>
     </form>
     <br>
-</div>
-
-<div class="bgDiv">
-    <br>
-    <h2>Un panel d'audits de sécurité adapté à vos besoins</h2>
-    <img src="Images/Ok.png"class="imgLogo" alt="audits de sécurité">
-    <p> 
-        Afin d'évaluer le niveau de sécurité de votre système d'information, je propose plusieurs types d'audits de sécurité.
-        Un effort tout particulier est porté sur les recommandations liées aux vulnérabilités découvertes. 
-        Ces "Quick-Wins" vous permettront de consolider rapidement la sécurité de vos actifs.        
-    </p>
     <form>
         <a href="/audits-ssi">
-            <input type="button" class="button" value="Voir les Audits de sécurité">
+            <input type="button" class="button" value="Audits de sécurité">
         </a>
     </form>
     <br>
-</div>
-
-<div>
-    <br>
-    <h2> Une recherche d'amélioration constante </h2>
-    <img src="Images/Ok.png"class="imgLogo" alt="méthode SIMPLE">
-    <p>
-        Grâce à un temps dédié au retour d'expérience, à la prise de recul et au développement d'outillage et de processus efficients,
-        j'ai l'ambition d'aller plus loin dans la sécurisation des projets applicatifs. Ce travail est consultable et open source. 
-    </p>
-    <form>
-        <a href="https://github.com/Aif4thah">
-            <input type="button" class="button" value="Découvrir les projets (GitHub)">
-        </a>
-    </form>
-    <br>
-</div>
-
-<div class="bgDiv">
-    <br>
-    <h2>Des formations et sensibilisations sur mesures</h2>
-    <img src="Images/Ok.png"class="imgLogo" alt="Formations et Sensibilisations">
-    <p> 
-        Des formations destinées aux entreprises et aux écoles du numérique sont également proposées. 
-        Elles ont pour objectif de partager un contenu riche et à jour, permettant de progresser, quel que soit le niveau initial.
-    </p>
     <form>
         <a href="/Formations">
-            <input type="button" class="button" value="Voir les Formations">
+            <input type="button" class="button" value="Formations">
         </a>
     </form>
     <br>
+    <form>
+        <a href="https://github.com/Aif4thah">
+            <input type="button" class="button" value="R&D (github)">
+        </a>
+    </form>
+
+
 </div>
