--- a/Pages/Simple.razor
+++ b/Pages/Simple.razor
@@ -8,10 +8,10 @@
 
 <h1>Accompagnement</h1>
 <p class="sh1">
-    Je propose une prestation d'accompagnement qui va à l'essentiel.
-    Baptisée "SIMPLE", cette méthode sécurise votre projet à court terme.
+        La méthode S.I.M.P.L.E est issue d'une capitalisation de l'expérience acquise auprès d'une centaine de projets
+        applicatifs. Les bonnes pratiques de l'<a href="https://www.ssi.gouv.fr/">ANSSI</a> et les standards de l'<a href="https://owasp.org/projects/">OWASP</a> 
+        sont intégrés à la méthode.
 </p>
-
 
 <div class="bgAccompagnement">
     <br><br><br><br><br><br><br><br><br>
@@ -26,8 +26,7 @@
     <br>
     <p>
         L'objectif de cette méthode d'accompagnement est de faire progresser significativement le niveau de sécurité
-        d'un projet
-        en moins de 2 mois.
+        d'un projet en moins de 2 mois.
         Cette méthode est public et open source. Chacun peut l'utiliser librement sur ce site.
         Elle nécessite néanmoins l'expérience, l'expertise technique et la partialité d'une prestation d'accompagnement
         en cybersécurité.
