--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -34,13 +34,13 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/Formations">
-                <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Formation
+                <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Formations
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="https://github.com/Aif4thah">
-                <img src="Images/Github.png" class="imgNav" alt="--"> Développement
+                <img src="Images/Github.png" class="imgNav" alt="--"> R&D
             </NavLink>
         </div>
 
