--- a/Pages/Formation.razor
+++ b/Pages/Formation.razor
@@ -37,7 +37,7 @@
     <span class="oi oi-book" aria-hidden="true"></span>
     <br>
     <p>
-        De bac+3 à Bac+5, de nombreux cours et TP sont réalisés depuis 2018 pour des cursus de chef de projets,
+        Jusqu'au Bac+6, de nombreux cours et TP sont réalisés depuis 2018 pour des cursus de chef de projets,
         développeurs ou experts cybersécurité.
         Une attention toute particulière est portée aux syllabus et référentiels de formation.
         Des TP concrets et réalistes permettent l'acquisition des compétences opérationnelles attendues sur le marché du
