--- a/Pages/Formation.razor
+++ b/Pages/Formation.razor
@@ -25,8 +25,7 @@
     <p>
         La sécurité est l’affaire de tous !
         Les sensibilisations sont adaptées à vos personnels afin de prévenir au maximum les risques pesant sur vos
-        systèmes d'information.
-        Il peut s'agir de sensibilisations annuelles, de démonstration de cyberattaque, ou de formations spécifiques.
+        systèmes d'information. Il peut s'agir de sensibilisations annuelles ou de formations spécifiques.
     </p>
     <br>
 </div>
