--- a/Pages/Simple.razor
+++ b/Pages/Simple.razor
@@ -41,10 +41,9 @@
     <p>Le champ de cette méthodologie cible les projets applicatifs ainsi que l'infrastructure sur laquelle ils
         reposent, ce qui inclut:</p>
     <ul>
-        <li>- toute application métier, qu'il s'agisse d'un environnement Web, industriel, IoT, cloud, hybride, etc.
-        </li>
+        <li>- toute application métier, qu'il s'agisse d'un environnement Web, industriel, IoT, cloud, hybride, etc.</li>
         <li>- le middleware, les librairies, les dépendances et les composants tiers</li>
-        <li>- les composants du système d’exploitation, des microservices, ainsi que leur orchestration</li>
+        <li>- les composants du système d’exploitation et des microservices</li>
         <br>
     </ul>
 </div>
