--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -8,7 +8,7 @@
 
 <div class="bgBan">
     <br>
-    <img src="Images/Logov2.png" class="imgBan" alt="Conseil en systèmes et logiciels informatiques">
+    <img src="Images/Logov2.png" class="imgBan" alt="Conseil en sécurité des systèmes d’information">
     <br>
 </div>
 <center>
