--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -312,7 +312,7 @@ hr.line {
     .sk-cube-grid .sk-cube {
         width: 33%;
         height: 33%;
-        background-color: #851c1c;
+        background-color: #000000;
         float: left;
         -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
         animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
