--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -4,12 +4,12 @@
 
 <link rel="icon" type="image/x-icon" href="~/Images/Favicon.ico" />
 <h1>TAISEN Solutions</h1>
-<p class="sh1">Taisen est une microentreprise fondée en 2022. Cette structure me permet de vous accompagner pour la sécurisation de votre système d'information.</p>
+<p class="sh1">Taisen est une entreprise fondée en 2022. Cette structure me permet de vous accompagner pour la sécurisation de votre système d'information.</p>
 
 <div class="bgBan">
-    <br>
+    <br><br>
     <img src="Images/Logov2.png" class="imgBan" alt="Conseil en sécurité des systèmes d’information">
-    <br>
+    <br><br>
 </div>
 <center>
     <hr class="line">
@@ -17,7 +17,7 @@
 
 <div>
     <form>
-        <a href="/simple">
+        <a href="/accompagnement">
             <input type="button" class="button" value="Accompagnement">
         </a>
     </form>
