--- a/Pages/Simple.razor
+++ b/Pages/Simple.razor
@@ -1,50 +1,10 @@
-﻿@page "/simple"
+﻿@page "/Simple/{IEtape:int?}"
 @layout SimpleLayout
 @inject HttpClient Http
 @inject Blazored.LocalStorage.ILocalStorageService localStorage
 @using TAISEN.Classes;
 
 <PageTitle>SIMPLE</PageTitle>
-
-<h1>Accompagnement</h1>
-<p class="sh1">
-        La méthode S.I.M.P.L.E est issue d'une capitalisation de l'expérience acquise auprès d'une centaine de projets
-        applicatifs. Les bonnes pratiques de l'<a href="https://www.ssi.gouv.fr/">ANSSI</a> et les standards de l'<a href="https://owasp.org/projects/">OWASP</a> 
-        sont intégrés à la méthode.
-</p>
-
-<div class="bgAccompagnement">
-    <br><br><br><br><br><br><br><br><br>
-</div>
-<center>
-    <hr class="line">
-</center>
-
-<div>
-    <h2>SIMPLE</h2>
-    <span class="oi oi-shield" aria-hidden="true"></span>
-    <br>
-    <p>
-        L'objectif de cette méthode est de faire progresser significativement le niveau de sécurité d'un projet en moins de 2 mois.
-        Cette méthode est publique et open source. Chacun peut l'utiliser librement et l'ajuster en fonction de son besoin.
-        Elle nécessite néanmoins l'expérience, l'expertise technique et la partialité d'une prestation d'accompagnement.
-        Je reste à l'écoute de vos besoins et pour toute question autour de cette méthodologie.
-    </p>
-</div>
-
-<div>
-    <h2>Périmètre</h2>
-    <span class="oi oi-crop" aria-hidden="true"></span>
-    <br>
-    <p>Le champ de cette méthodologie cible les projets applicatifs ainsi que l'infrastructure sur laquelle ils
-        reposent, ce qui inclut:</p>
-    <ul>
-        <li>- toute application métier, qu'il s'agisse d'un environnement Web, industriel, IoT, cloud, hybride, etc.</li>
-        <li>- le middleware, les librairies, les dépendances et les composants tiers</li>
-        <li>- les composants du système d’exploitation et des microservices</li>
-        <br>
-    </ul>
-</div>
 
 @if (GetEtapes == null)
 {
@@ -59,97 +19,362 @@
         <div class="sk-cube sk-cube8"></div>
         <div class="sk-cube sk-cube9"></div>
     </div>
+    <button class="button" @onclick=Clear>Vider le cache</button>
 }
-else if ( InputsCheck.SEtapeChek(GetEtapes))
+else if (InputsCheck.SEtapeChek(GetEtapes))
 {
+    E = GetEtapes?[InputsCheck.SimpleIntCheck(IEtape, GetEtapes)];
+    <h1>@E?.Etape</h1>
+    <span class="oi oi-briefcase" aria-hidden="true"></span>
+    <p class="sh1">@E?.Objectif</p>
 
-    <div class="bgDiv">
-        <br>
-        <h2>Référentiels</h2>
-        <span class="oi oi-compass" aria-hidden="true"></span>
-        <br>
 
+    @foreach (Atelier A in E.Ateliers)
+    {
+        <div class="bgDiv">
+            <h3><b>@A.Nom</b><br>@A.Description</h3>
+            <span class="oi oi-clipboard" aria-hidden="true"></span><br>
+            <div>
+                <ul>
+                    <li><b>Poids :</b> @A.Poids</li>
+                    <li><b>Nombre de Processus :</b> @A.Processus.Count()</li>
+                    @if (@A.Prerequis != null)
+                    {
+                        <li><b>Prérequis :</b> @A.Prerequis</li>
+                    }
+
+                    @if (@A.Interlocuteurs != null)
+                    {
+                        string Tous = string.Empty;
+                        bool first = true;
+                        @foreach (string I in A.Interlocuteurs)
+                        {
+                            @if (first)
+                            {
+                                Tous += I;
+                                first = false;
+                            }
+                            else
+                            {
+                                Tous += ", " + I;
+                            }
+                        }
+                        <li><b>Interlocuteurs :</b> @Tous</li>
+                    }
+                </ul>
+            </div>
+
+
+            <fieldset>
+                @foreach (Processus P in A.Processus)
+                {
+                    <legend>@P.Nom</legend>
+
+                    @if (@P.Referentiel != null)
+                    {
+                        <div>
+                            <ul>
+                                <li><b>Referentiel : </b><a href="@P.Referentiel.Uri">@P.Referentiel.Nom</a></li>
+                            </ul>
+                        </div>
+                        <br>
+                    }
+
+                    @if (@P.Outils != null)
+                    {
+                        @foreach (Outil tool in @P.Outils)
+                        {
+                            <div>
+                                <ul>
+                                    <li><b>Outillage : </b><a href="@tool.Uri">@tool.Nom</a></li>
+                                </ul>
+                            </div>
+                            <br>
+                        }
+
+                    }
+
+
+
+                    @foreach (Livrable L in P.Livrables)
+                    {
+                        <a>@L.Nom :</a>
+                        @if (@L.CR?.Texte != null)
+                        {
+
+                            <EditForm Model=@L.CR.Texte>
+                                    <DataAnnotationsValidator />
+                                <InputTextArea @bind-Value="@L.CR.Texte" cols="80%" />
+                            </EditForm>
+
+                        }
+
+                        if (@L.CR?.Els?.Count > 0)
+                        {
+                            @if (@L.CR.Els.LastOrDefault()?.Texte != DefaultStr)
+                            {
+                                L.CR.Els.Add(new El() { Texte = DefaultStr });
+                            }
+
+                            linqRslt = @L.CR.Els.RemoveAll(El => El.Texte == String.Empty);
+
+                            <form>
+                                <EditForm Model=@L.CR.Els>
+                                    <DataAnnotationsValidator />
+                                    @foreach (El el in L.CR.Els)
+                                    {
+                                        <InputText @bind-Value=@el.Texte />
+                                        <br>
+                                    }
+                                </EditForm>
+                                <button class="button" @onclick=Save>Sauvegarder</button>
+                            </form>
+
+                        }
+
+
+                        if (@L.CR?.FonctionSensibles?.Count > 0)
+                        {
+                            @if (@L.CR.FonctionSensibles.LastOrDefault()?.Nom != DefaultStr)
+                            {
+                                L.CR.FonctionSensibles.Add(new FonctionSensible()
+                                {
+                                    Nom = DefaultStr,
+                                    Spoofing = true,
+                                    Tampering = true,
+                                    Repudiation = true,
+                                    InformationDisclosure = true,
+                                    DenialOfService = true,
+                                    ElevationOfPrivilege = true
+                                });
+                            }
+
+                            linqRslt = @L.CR.FonctionSensibles.RemoveAll(fs => fs.Nom == String.Empty);
+
+                            <form>
+                                <EditForm Model=@L.CR.FonctionSensibles>
+                                    <DataAnnotationsValidator />
+                                    @foreach (FonctionSensible fs in L.CR.FonctionSensibles)
+                                    {
+                                        <InputText @bind-Value=@fs.Nom />
+                                        <label>S:
+                                            <InputCheckbox @bind-Value=@fs.Spoofing />
+                                        </label>
+                                        <label>T:
+                                            <InputCheckbox @bind-Value=@fs.Tampering />
+                                        </label>
+                                        <label>R:
+                                            <InputCheckbox @bind-Value=@fs.Repudiation />
+                                        </label>
+                                        <label>I:
+                                            <InputCheckbox @bind-Value=@fs.InformationDisclosure />
+                                        </label>
+                                        <label>D:
+                                            <InputCheckbox @bind-Value=@fs.DenialOfService />
+                                        </label>
+                                        <label>E:
+                                            <InputCheckbox @bind-Value=@fs.ElevationOfPrivilege />
+                                        </label>
+                                        <br>
+                                    }
+                                </EditForm>
+                                <button class="button" @onclick=Save>Sauvegarder</button>
+                            </form>
+                        }
+
+
+                        if (@L.CR?.MesureSecurites?.Count > 0)
+                        {
+                            @if (@L.CR.MesureSecurites.LastOrDefault()?.Nom != DefaultStr)
+                            {
+                                L.CR.MesureSecurites.Add(new MesureSecurite()
+                                {
+                                    Nom = DefaultStr,
+                                    Description = DefaultStr,
+                                    SpoofingPrevention = false,
+                                    TamperingPrevention = false,
+                                    RepudiationPrevention = false,
+                                    InformationDisclosurePrevention = false,
+                                    DenialOfServicePrevention = false,
+                                    ElevationOfPrivilegePrevention = false,
+                                });
+                            }
+
+                            linqRslt = @L.CR.MesureSecurites.RemoveAll(ms => ms.Nom == String.Empty);
+
+                            <form>
+                                <EditForm Model=@L.CR.MesureSecurites>
+                                    <DataAnnotationsValidator />
+                                    @foreach (MesureSecurite ms in @L.CR.MesureSecurites)
+                                    {
+                                        <InputSelect @bind-Value=@ms.FonctionCible>
+                                            <option value="">Lier à une fonction sensible</option>
+                                            @foreach (FonctionSensible fs in CollectedFs)
+                                            {
+                        <option value=@fs.Nom>@fs.Nom</option>
+                                            }
+                </InputSelect>
+
+                                        <InputText @bind-Value=@ms.Nom />
+                                        <InputText @bind-Value=@ms.Description />
+                                        <label>S:
+                                            <InputCheckbox @bind-Value=@ms.SpoofingPrevention />
+                                        </label>
+                                        <label>T:
+                                            <InputCheckbox @bind-Value=@ms.TamperingPrevention />
+                                        </label>
+                                        <label>R:
+                                            <InputCheckbox @bind-Value=@ms.RepudiationPrevention />
+                                        </label>
+                                        <label>I:
+                                            <InputCheckbox @bind-Value=@ms.InformationDisclosurePrevention />
+                                        </label>
+                                        <label>D:
+                                            <InputCheckbox @bind-Value=@ms.DenialOfServicePrevention />
+                                        </label>
+                                        <label>E:
+                                            <InputCheckbox @bind-Value=@ms.ElevationOfPrivilegePrevention />
+                                        </label>
+                                        <br>
+                                    }
+                                </EditForm>
+                                <button class="button" @onclick=Save>Sauvegarder</button>
+                            </form>
+                        }
+
+                        if (@L.CR?.RecetteSecus?.Count > 0)
+                        {
+                            @if (@L.CR.RecetteSecus.LastOrDefault()?.MesureTestee != DefaultStr)
+                            {
+                                L.CR.RecetteSecus.Add(new RecetteSecu()
+                                {
+                                    MesureTestee = DefaultStr,
+                                    Efficacite = 0
+                                });
+                            }
+
+                            linqRslt = @L.CR.RecetteSecus.RemoveAll(rs => rs.MesureTestee == string.Empty);
+
+                            <form>
+                                <EditForm Model=@L.CR.RecetteSecus>
+                                    <DataAnnotationsValidator />
+                                    @foreach (RecetteSecu rs in @L.CR.RecetteSecus)
+                                    {
+                                        <InputSelect @bind-Value=@rs.MesureTestee>
+                                            <option value="">Lier à une mesure de sécurité</option>
+                                            @foreach (MesureSecurite ms in CollectedMs)
+                                            {
+                        <option value=@ms.Nom>@ms.Nom</option>
+                                            }
+                </InputSelect>
+
+                                        <InputNumber id="name" @bind-Value=@rs.Efficacite />
+                                        <br>
+                                    }
+                                </EditForm>
+                                <button class="button" @onclick=Save>Sauvegarder</button>
+                            </form>
+                        }
+                    }
+
+                    <ul>
+                        <li>
+                            <input class="CheckBox" type="checkbox" @bind=@P.Fin name=@P.Nom value=@P.Nom />
+                            <label for=@P.Nom>Réalisé</label>
+                        </li>
+                    </ul>
+                    <br>
+                }
+            </fieldset>
+
+        </div>
+    }
+    <form>
+        @if ((IEtape % GetEtapes?.Count()) != 0)
+        {
+            <a href="/simple/@((IEtape-1))"><input type="button" class="button" value="< Etape précédente"></a>
+        }
+        @if ((IEtape % GetEtapes?.Count()) != GetEtapes?.Count() - 1)
+        {
+            <a href="/simple/@((IEtape+1))"><input type="button" class="button" value="Etape Suivante >"></a>
+        }
+    </form>
+
+}
+
+
+@code {
+    [Parameter]
+    public int IEtape { get; set; } = 0;
+    public string DefaultStr = "Nouvel Élément";
+    public int linqRslt;
+    private List<FonctionSensible> CollectedFs = new List<FonctionSensible>();
+    private List<MesureSecurite> CollectedMs = new List<MesureSecurite>();
+    private SEtape[]? GetEtapes;
+    private SEtape? E;
+
+
+    protected override async Task OnInitializedAsync()
+    {
+
+        try
+        {
+            GetEtapes = await localStorage.GetItemAsync<SEtape[]>("SIMPLE");
+            GetFsMs();
+
+        }
+        catch
+        {
+            await localStorage.ClearAsync();
+            GetEtapes = await Http.GetFromJsonAsync<SEtape[]>("/Data/SIMPLE.json");
+            GetFsMs();
+        }
+    }
+
+    public async Task Save()
+    {
+        await localStorage.SetItemAsync("SIMPLE", GetEtapes);
+    }
+
+    public void GetFsMs()
+    {
         @foreach (SEtape E in GetEtapes)
         {
             @foreach (Atelier A in E.Ateliers)
             {
-                TotalPoids += A.Poids;
                 @foreach (Processus P in A.Processus)
                 {
-                    @if (P.Referentiel != null)
+                    @foreach (Livrable L in P.Livrables)
                     {
-                        <a href="@P.Referentiel.Uri">@P.Referentiel.Nom</a>
-                        <br>
+                        @if (A.Nom == "I2" && L.CR?.FonctionSensibles?.Count > 0)
+                        {
+                            foreach (FonctionSensible fs in L.CR.FonctionSensibles)
+                            {
+                                @if (fs.Nom != DefaultStr)
+                                {
+                                    CollectedFs?.Add(fs);
+                                }
+                            }
+                        }
+                        else if (A.Nom == "P2" && L.CR?.MesureSecurites?.Count > 0)
+                        {
+                            foreach (MesureSecurite ms in L.CR.MesureSecurites)
+                            {
+                                @if (ms.Nom != DefaultStr)
+                                {
+                                    CollectedMs?.Add(ms);
+                                }
+                            }
+                        }
                     }
                 }
             }
         }
-        <br>
-    </div>
-
-    <div>
-        <br>
-        <h2>Étapes</h2>
-        <span class="oi oi-key" aria-hidden="true"></span>
-        <br>
-        <ul>
-            @foreach (SEtape E in GetEtapes)
-            {
-                <li><b>@E.Etape.FirstOrDefault()</b> : @E.Etape</li>
-            }
-            <br>
-        </ul>
-
-    </div>
-
-    <div class="bgDiv">
-        <br>
-        <h2>Ateliers</h2>
-        <span class="oi oi-layers" aria-hidden="true"></span>
-        <br>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Atelier</th>
-                    <th>Poids</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (SEtape E in GetEtapes)
-                    @foreach (Atelier A in E.Ateliers)
-                    {
-                        <tr>
-                            <td>@A.Nom</td>
-                            <td>@A.Description</td>
-                            <td>@A.Poids</td>
-                        </tr>
-                    }
-            </tbody>
-        </table>
-        <a>Soit un poids total moyen de @TotalPoids jours pour un accompagnement type. Cette charge est ajustée selon le contexte.</a>
-        <br>
-    </div>
-
-}
-
-<form>
-    <a href="/simple-demo">
-        <button class="button" @onclick=Clear>Nouvel Accompagnement</button>
-        <input type="button" class="button" value="Poursuivre">
-    </a>
-</form>
-
-@code {
-    private SEtape[]? GetEtapes;
-    private int TotalPoids = 0;
-    protected override async Task OnInitializedAsync()
-    {
-        GetEtapes = await Http.GetFromJsonAsync<SEtape[]>("/Data/SIMPLE.json");
     }
 
     public async Task Clear()
     {
         await localStorage.ClearAsync();
     }
+
 }
