--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -21,7 +21,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/simple">
+            <NavLink class="nav-link" href="/accompagnement">
                 <span class="oi oi-task" aria-hidden="true"></span> Accompagnement
             </NavLink>
         </div>
